# microhal-crc

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  microhal-crc.hpp
tests/multiplatformPerformance/: CMakeLists.txt  test.cpp
tests/performance/: CMakeLists.txt  crc_bitShift.cpp  crc_bitShiftLsb.cpp  crc_table256.cpp  crc_table256Lsb.cpp
tests/unitTests/: CMakeLists.txt  main.cpp  test_crcUsedInSdCard.cpp  test_partialCrcComputation.cpp  test_predefinedCrc.cpp  test_stringCrcPolynomial.cpp  test_tableGeneration.cpp
tools/: report.tex  reportGenerator.py
